[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/space-shooter-redux/PNG/playerShip1_orange.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.0

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 0, -1.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RightCannon" type="Node2D" parent="." index="2"]

position = Vector2( 27, -27 )
_sections_unfolded = [ "Transform" ]

[node name="LeftCannon" type="Node2D" parent="." index="3"]

position = Vector2( -27, -27 )
_sections_unfolded = [ "Transform" ]

[node name="CanFireTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[connection signal="timeout" from="CanFireTimer" to="." method="_on_CanFireTimer_timeout"]


